homeworks/big_hw2/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: muffin
spec:
  mtls:
    mode: STRICT
