homeworks/big_hw2/istio/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - grafana.muffin.nrunnercloud.xyz
  gateways:
    - muffin/wallet-gateway
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 80
