homeworks/big_hw2/istio/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - prom.muffin.nrunnercloud.xyz
  gateways:
    - muffin/wallet-gateway
  http:
    - route:
        - destination:
            host: prometheus
            port:
              number: 9090
