homeworks/big_hw2/istio/wallet-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: wallet
  namespace: muffin
spec:
  hosts:
    - muffin.nrunnercloud.xyz
  gateways:
    - wallet-gateway
  http:
    - route:
        - destination:
            host: muffin-wallet
            port:
              number: 8081
